[feature](fe) Add native Delta Lake append support
### What problem does this PR solve?

Issue Number: None

Related PR: None

Problem Summary: The native Delta connector could plan and read Delta snapshots but had no end-to-end write path. This change adds an opt-in file append lifecycle for path-based, unpartitioned baseline Delta tables. BE writes Parquet files and reports structured file metadata, FE collects and deduplicates those reports, and Delta Kernel commits the corresponding AddFile actions. Unsupported Unity/catalog-managed writes, partitioned tables, advanced writer protocols, incompatible schemas, and missing file reports fail explicitly.

### Release note

Add experimental native Delta Lake INSERT support for path-based, unpartitioned baseline tables with delta.write.enabled=true.

### Check List (For Author)

- Test: Unit Test and Manual test
    - Delta connector unit tests
    - FE coordinator and fail-closed unit tests
    - Local single-node end-to-end INSERT and snapshot refresh test
- Behavior changed: Yes. Opt-in native Delta path catalogs can append Parquet data and commit Delta log versions.
- Does this need documentation: Yes. Documentation will follow when the experimental scope is promoted.